--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* html,
+body {
+  height: 100%;
+  overflow: hidden;
+} */
+
+/* Scrollbar stylée uniquement sur .scrollbar-thin */
+.scrollbar-thin {
+  scrollbar-width: thin;
+  scrollbar-color: #527181 transparent;
+}
+
+
+/* .scrollbar-thin::-webkit-scrollbar {
+  width: 6px;
+} */
+
+/* .scrollbar-thin::-webkit-scrollbar-track {
+  background: transparent;
+} */
+
+/* .scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #7dd3fc;
+  border-radius: 4px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+}
+
+.dark .scrollbar-thin::-webkit-scrollbar-thumb {
+  background-color: #38bdf8;
+} */
+
