--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,4 +33,10 @@ body {
 .dark .scrollbar-thin::-webkit-scrollbar-thumb {
   background-color: #38bdf8;
 } */
+/* globals.css */
+.input {
+  @apply w-full px-3 py-3 rounded-lg text-[12px]
+  dark:bg-slate-900 dark:text-slate-200
+  border border-slate-700 focus:outline-none focus:ring-2 focus:ring-sky-600;
+}
 
